--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <!-- Include the Quill library -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://apis.google.com/js/client.js"></script>
     
    
    
